Bug 111834 - Handout view: useless items on sidebar
Summary: Handout view: useless items on sidebar
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords: difficultyBeginner, easyHack, skillCpp
Depends on:
Blocks: Handout-View
  Show dependency treegraph
 
Reported: 2017-08-16 00:24 UTC by Tamás Zolnai
Modified: 2017-09-23 20:04 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2017-08-16 00:24:05 UTC
Description:
Handout view in Impress is a special view for which user can't set background color (check context menu -> Slide Properties: area tab is missing), so would be good to hide the background related items on sidebar when in handout view.

Steps to Reproduce:
1. Open Impress
2. Switch handout view
3. Check sidebar's master slide tab

Actual Results:  
On sidebar user can set background color, but it has no effect.

Expected Results:
Since in handout view you can't set background color either from the context menu, the right behaviour would be not to show this option on the sidebar.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/60.0.3112.90 Safari/537.36
Comment 1 Telesto 2017-08-16 10:03:15 UTC
Repro with:
Version: 6.0.0.0.alpha0+
Build ID: f1a896c71c495bdef5861eb664581507b6b9b5bb
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-08-13_07:38:19
Locale: nl-NL (nl_NL); Calc: CL
Comment 2 Tamás Zolnai 2017-08-24 17:44:14 UTC
Let's turn this into an easy hack. The code is here:
sd/source/ui/sidebar/SlideBackground.cxx
SlideBackground::HandleContextChange() method might be a good starting point.
Comment 3 Commit Notification 2017-09-06 15:02:58 UTC
blendergeek committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6758db065d77bdebed54e5d3532796a2c3c24088

tdf#111834: hide useless background controls in Handout View

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.