tdf#111834: hide useless background controls in Handout View

Change-Id: Ia51c671f17dbb8cc36a73ee662c1c57e23e7818f
Reviewed-on: https://gerrit.libreoffice.org/41968
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
Tested-by: Tamás Zolnai <tamas.zolnai@collabora.com>